infrastructure/configs/flux-system/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: webhook-ip-allowlist
  namespace: flux-system
spec:
  ipAllowList:
    sourceRange:
      - 140.82.112.0/20
      - 143.55.64.0/20
      - 185.199.108.0/22
      - 192.30.252.0/22
      - 2606:50c0::/32
      - 2a0a:a440::/29
