infrastructure/configs/flux-system/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: flux-system
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: webhook-tls
