infrastructure/configs/flux-system/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook
  namespace: flux-system
spec:
  hostnames:
    - flux.osborn.io
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: notification-controller
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: webhook-ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /hook/
