infrastructure/configs/flux-system/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hook
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flux.osborn.io`) && PathPrefix(`/hook/`)
      middlewares:
        - name: hook-ip-allowlist
      services:
        - name: notification-controller
          port: 80
  tls:
    secretName: hook-tls
